@@ -56,6 +56,7 @@
 
     Event Console:
     * 0026 FIX: snmpd_mkevent.py: fixed crash on startup
+    * 0036 FIX: fixed bug in multisite command execution...
 
     Livestatus:
     * 0067 livedump: new option to mark the mode at the beginning of the dump and documentation fixes...
